--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts",
         "start": "node dist/server.js",
         "build": "tsc",
-        "test": "jest"
+        "test": "jest",
+        "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "devDependencies": {
         "@types/express": "^4.17.13",
