--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
     "name": "aula-top",
     "version": "1.0.0",
     "description": "uma aula sobre backend",
-    "main": "src/server.ts",
+    "main": "src/common/infra/server.ts",
     "author": "manuel-antunes",
     "license": "MIT",
     "private": false,
     "scripts": {
-        "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+        "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/common/infra/server.ts",
         "start": "node dist/server.js",
         "build": "tsc",
         "test": "jest",
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.13",
         "@types/jest": "^27.0.1",
         "@types/socket.io": "^3.0.2",
@@ -35,6 +36,7 @@
         "typescript": "^4.4.2"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "socket.io": "^4.2.0"
     },
@@ -52,7 +54,10 @@
         "collectCoverageFrom": [
             "**/*.(t|j)s"
         ],
-        "moduleDirectories": ["node_modules", "src"],
+        "moduleDirectories": [
+            "node_modules",
+            "src"
+        ],
         "coverageDirectory": "../coverage",
         "testEnvironment": "node"
     }
