--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     },
     "dependencies": {
         "cors": "^2.8.5",
+        "ejs": "^3.1.6",
         "express": "^4.17.1",
+        "express-ejs": "^2.0.0",
+        "peerjs": "^1.3.2",
         "socket.io": "^4.2.0"
     },
     "jest": {
