--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "express": "^4.17.1",
         "express-ejs": "^2.0.0",
         "peerjs": "^1.3.2",
-        "socket.io": "^4.2.0"
+        "socket.io": "^4.2.0",
+        "socket.io-stream": "^0.9.1"
     },
     "jest": {
         "moduleFileExtensions": [
